--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 <body>
     <h1>Portfolio</h1>
+    <br>
     <h1>Par mani</h1>
-    <p>Mani sauc</p>
+    <p>Mani sauc Matīss Uldriķis Es mācos par programmēšanas tehniķi vidzemes tehnoloģijas un dizaina tehnikuma(vtdt)</p>
+    <h1>Hobiji</h1>
+    <p>Mani hobiji ir spēlet un skatitites futbolu un basketbolu pavadit laiku pie datora un braukat apkart pasaulei</p>
 </body>
 </html>
