--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
     <p>Mani sauc Matīss Uldriķis Es mācos par programmēšanas tehniķi vidzemes tehnoloģijas un dizaina tehnikuma(vtdt)</p>
     <h1>Hobiji</h1>
     <p>Mani hobiji ir spēlet un skatitites futbolu un basketbolu pavadit laiku pie datora un braukat apkart pasaulei</p>
+    <style>
+    h1{
+        text-align: center;
+    }
+    p{
+        text-align: center;
+    }
+</style>
 </body>
 </html>
