--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <p>Mani sauc Matīss Uldriķis Es mācos par programmēšanas tehniķi vidzemes tehnoloģijas un dizaina tehnikuma(vtdt)</p>
     <h1>Hobiji</h1>
     <p>Mani hobiji ir spēlet un skatitites futbolu un basketbolu pavadit laiku pie datora un braukat apkart pasaulei</p>
+    <h1>Mani projekti</h1>
+    <p></p>
     <style>
     h1{
         text-align: center;
+        border: 100px solid;
+        padding: 100px;
+        margin: 100px;
+        background-color: lightblue;
     }
     p{
         text-align: center;
