--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
     <h1>Portfolio</h1>
     <br>
     <h1>Par mani</h1>
-    <p>Mani sauc Matīss Uldriķis Es mācos par programmēšanas tehniķi vidzemes tehnoloģijas un dizaina tehnikuma(vtdt)</p>
+    <p>Mani sauc Matīss Uldriķis man ir 17 gadi Es mācos par programmēšanas tehniķi vidzemes tehnoloģijas un dizaina tehnikuma(vtdt)</p>
     <h1>Hobiji</h1>
     <p>Mani hobiji ir spēlet un skatitites futbolu un basketbolu pavadit laiku pie datora un braukat apkart pasaulei</p>
-    <h1>Mani projekti</h1>
-    <p></p>
+    <h1>Valodas kuras es zinu</h1>
+    <p>1.CSS 2.JS 3.C++ 4.PHP</p>
     <style>
     h1{
         text-align: center;
-        border: 100px solid;
-        padding: 100px;
-        margin: 100px;
+        border: 20px solid;
+        padding: 20px;
         background-color: lightblue;
     }
     p{
