--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     }
     p{
         text-align: center;
+        border: 20px solid;
+        background-color: lightblue;
     }
 </style>
 </body>
