--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <style>
     h1{
         text-align: center;
-        border: 20px solid;
+        border: 20px;
         background-color: lightblue;
     }
     p{
         text-align: center;
-        border: 20px solid;
+        border: 20px ;
         background-color: lightblue;
     }
 </style>
